# versionize

./: README.org  pyproject.toml  setup.cfg
docs/: concepts.org
example/: pipeline.py  task1.py  task2.py
example/results/: .metaversion
example/results/v1/task1/: .metaversion  filesave.txt
example/results/v1/task2/: .metaversion  parameter.txt
src/versionize/: __init__.py  core.py
