[metadata]
name = versionize
version = attr: versionize._version.__version__
description = Simple version control of codes and results
license_files = LICENSE.txt
author = sugayu

[flake8]
max-line-length = 88
extend-ignore = E203

[options]
python_requires = >=3.9, <4
packages = find_namespace:
install_requires =
    numpy
    scipy
    astropy
    reproject
    statsmodels

[options.package_data]
sugayutils =
    py.typed
